# OpenGL-Renderer

./: .env.cmake  .gitignore  .gitmodule  CMakeLists.txt  animation.json  readme.md  readme_BACKUP_16339.md  readme_LOCAL_16339.md
Models/lightbulb/: license.txt  scene.gltf
shaders/: Cube.frag  color.frag  color.vert  colorModel.frag  colorModelAni.vert  shader.vert
src/: Animation.cpp  Animation.h  Animation.hpp  Animator.cpp  Animator.hpp  Bone.cpp  Controller.cpp  Controller.hpp  GLRenderer.cpp  GLRenderer.hpp  Interface.cpp  Interface.hpp  LightingSystem.cpp  LightingSystem.hpp  ManualAnimator.cpp  ManualAnimator.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  Shader.cpp  Shader.hpp  Shape.hpp  Texture.cpp  Texture.hpp  Utilities.h  glad.c  json_animation.cpp  json_animation.hpp  main.cpp  udpServer.hpp  window.cpp  window.hpp
